--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 <!DOCTYPE HTML>
 <html>
 	<head>
-		<title>2hearts Website Template | Home :: W3layouts</title>
+		<title>Hellyn & Matheus</title>
 		<link href="css/style.css" rel="stylesheet" type="text/css"  media="all" />
 		<link href='http://fonts.googleapis.com/css?family=Cookie' rel='stylesheet' type='text/css'>
 		<link rel="stylesheet" href="css/responsiveslides.css">
@@ -48,7 +48,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 			<div class="wrap">
 			<!---start-logo---->
 			<div class="logo">
-				<a href="index.html"><img src="images/logo.png" title="logo" /></a>
+				Hellyn & Matheus
 			</div>
 			<!---End-logo---->
 			<!---start-top-nav---->
