--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 		<link href="css/style.css" rel="stylesheet" type="text/css"  media="all" />
 		<link href='http://fonts.googleapis.com/css?family=Cookie' rel='stylesheet' type='text/css'>
 		<link rel="stylesheet" href="css/responsiveslides.css">
-		<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.8.3/jquery.min.js"></script>
+		<script src="js/jquery-1.12.3.min.js"></script>
 		<script src="js/responsiveslides.min.js"></script>
 		  <script>
 		    // You can also use "$(window).load(function() {"
@@ -20,19 +20,11 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 			      // Slideshow 1
 			      $("#slider1").responsiveSlides({
 			        maxwidth: 1600,
-			        speed: 600
+			        speed: 50
 			      });
 			});
 		  </script>
 		  <script type="text/javascript">
-			jQuery(document).ready(function($) {
-				$(".scroll").click(function(event){		
-					event.preventDefault();
-					$('html,body').animate({scrollTop:$(this.hash).offset().top},1200);
-				});
-			});
-		</script>
-		<script type="text/javascript">
 			jQuery(document).ready(function($) {
 				$(".scroll").click(function(event){		
 					event.preventDefault();
@@ -48,17 +40,17 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 			<div class="wrap">
 			<!---start-logo---->
 			<div class="logo">
-				Hellyn & Matheus
+				<a href="index.html">Hellyn & Matheus</a>
 			</div>
 			<!---End-logo---->
 			<!---start-top-nav---->
 			<div class="top-nav">
 				<ul>
-					<li class="active"><a href="index.html">Home</a></li>
-					<li><a href="about.html">About</a></li>
-					<li><a href="services.html">Services</a></li>
-					<li><a href="gallery.html">Gallery</a></li>
-					<li><a href="contact.html">Contact</a></li>
+					<!---<li class="active"><a href="index.html">Home</a></li>--->
+					<!---<li><a href="about.html">About</a></li>---->
+					<li><a href="services.html">Lista de presentes</a></li>
+					<li><a href="gallery.html">Galeria</a></li>
+					<li><a href="contact.html">Confirmar presença</a></li>
 				</ul>
 			</div>
 			<div class="clear"> </div>
